--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /src/.vs/MarcoAspNetCoreViewComponent/v15
+/src/Marco.AspNetCore.ViewComponent/obj/Debug/netcoreapp2.1
